tests/paczka1/fuzzy1/72777955.err
Error in line 3: lvA A383 17,8
Error in line 2: gzk S376 11,1
Error in line 10: lvA S303 50,9
Error in line 13: lvA A383 80,6
Error in line 30: lvA S376 72,8
Error in line 34: lvA S935 19,2
Error in line 9: gzk A383 21,5
